# mmosa

./: .gitignore  Cargo.toml  config.toml  criteria.md  report.md
src/: app.rs  config.rs  event.rs  experiment.rs  history.rs  main.rs  results.rs  scenario.rs  simulation.rs  statistic.rs  tasks.rs
src/chart/: bar.rs  histogram.rs  hyperplane.rs  linear.rs  mod.rs
src/egui_charts/: histogram.rs  mod.rs
