[package]
name = "saimod"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
lstsq = "0.6.0"
nalgebra = "0.33.2"
plotters = { version = "0.3", features = ["evcxr", "all_series", "all_elements", "bitmap_backend", "image"] }
rand = "0.9.0-alpha.2"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"
toml = "0.8.19"
