[package]
name = "saimod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
eframe = "0.30.0"
egui = "0.30.0"
egui_plot = "0.30.0"
env_logger = "0.11.5"
log = "0.4.22"
lstsq = "0.6.0"
nalgebra = "0.33.2"
ndarray = "0.15"
ndarray-interp = "0.4.1"
plotters = { version = "0.3", features = ["evcxr", "all_series", "all_elements", "bitmap_backend", "image"] }
rand = "0.9.0-alpha.2"
rayon = "1.10.0"
rv = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"
toml = "0.8.19"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
